fix: alignment

--- a/core/src/components/datetime/datetime.scss
+++ b/core/src/components/datetime/datetime.scss
@@ -208,11 +208,15 @@ ion-picker-column-internal {
 .calendar-month-year-button {
   --background-focused: currentColor;
 
+  @include margin(0);
+
+  height: 48px;
+
   font-size: inherit;
   font-weight: inherit;
 
   letter-spacing: inherit;
-  
+
   text-transform: inherit;
 }
 
